# Stackmachine_realization

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  int_stack.cpp  int_stack.h  main.cpp  stack_machine.cpp  stack_machine.h
tests/: CMakeLists.txt  int_stack_test.cpp  stack_machine_test.cpp
tests/gtest/: gtest-all.cc  gtest-printers.h
tests/gtest/internal/: gtest-port.h
tests/gtest/src/: gtest-death-test.cc  gtest-port.cc  gtest-test-part.cc  gtest.cc
